[gd_scene load_steps=3 format=2]

[ext_resource path="res://Logo.jpeg" type="Texture" id=1]
[ext_resource path="res://Node2D.gd" type="Script" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Logo" type="Sprite" parent="."]
position = Vector2( 511.5, 261 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Group_Name" type="Label" parent="."]
margin_left = 351.0
margin_top = 41.0
margin_right = 673.0
margin_bottom = 126.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 444.0
margin_top = 448.0
margin_right = 572.0
margin_bottom = 495.0
text = "Mostrar Autores"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Group_Authors" type="Label" parent="."]
margin_left = 317.0
margin_top = 516.0
margin_right = 683.0
margin_bottom = 585.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
